@@ -22,7 +22,6 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
-import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.provider.Property;
 import org.gradle.api.tasks.CacheableTask;
@@ -125,19 +124,6 @@ public class BuildServiceTask extends JavaExec {
 	@PathSensitive(PathSensitivity.RELATIVE)
 	public File getInputFile() {
 		return GradleUtil.toFile(getProject(), _inputFile);
-	}
-
-	@Override
-	public List<String> getJvmArgs() {
-		List<String> jvmArgs = new ArrayList<>();
-
-		JavaVersion javaVersion = getJavaVersion();
-
-		if (javaVersion.isJava9Compatible()) {
-			jvmArgs.add("--illegal-access=permit");
-		}
-
-		return jvmArgs;
 	}
 
 	@Input
